--- a/index.html
+++ b/index.html
@@ -7,11 +7,25 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <style>
+    .submission-message {
+        text-align: center;
+        padding: 20px;
+        background-color: #4CAF50; /* Green background color */
+        color: white; /* White text color */
+        font-size: 24px;
+    }
+
+    .submission-message a {
+        color: white; /* White text color for the "Go back" link */
+    }
+</style>
 </head>
 
 <body>
     <header class="header">
-        <a href="#" class="logo">Deve<span>loper</span></a>
+        <a href="#" class="logo">Dev<span>Ops</span></a>
 
         <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -30,22 +44,22 @@
             <div class="text-animate">
                 <h3>DevOps Engineer</h3>
             </div>
-            <p>Aspiring DevOps Engineer seeking to leverage skills in automation, Git, Jenkins, Docker, Azure , AWS, and Linux to enhance SDLC efficiency and contribute to agile environments for efficient application deployment.
+            <p>DevOps Engineer with a passion for automation, Linux administration, Git version control, CI/CD, and cloud
+                technologies, seeking a role where I can leverage my skills to optimize software development workflows and enhance
+                application deployment efficiency.
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="" class="btn">Hire Me</a>
+                <a href="" class="btn">Let's Talk</a>
             </div>
         </div>
 
         <div class="img">
             <img class="image" src="MyImage.jpg.png" alt="My Image">
-
         </div>
 
         <div class="home-logo">
-            <a href="https://www.google.com/"><i class="bx bxl-google"></i></a>
             <a href="https://github.com/skumawatdev"><i class="bx bxl-github"></i></a>
             <a href="https://www.linkedin.com/in/kumawatsunil"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -57,23 +71,21 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="./Aj-removebg-preview.png" alt="">
+            <img src="MyImage.jpg.png" alt="My Image">
             <span class="circle-spin"></span>
         </div>
 
         <div class="about-content">
-            <h3>Frontend Developer!</h3>
+            <h3>Junior DevOps Engineer!</h3>
             <p>
-                My name is AJAY KUMAR. I'm from Begusarai district ,Bihar.
-                I did my class 10th and 12th from Bihar Board.
+                My name is Sunil Kumawat. I'm from Sikar district, Rajasthan.
+                I did my class 10th and 12th from CBSE Board.
 
-                Currently , I'm pursuing Bachelor of Technology from Jaipur Engineering College , specialization in
-                Computer Science engineering.
+                I hold a Bachelor of Technology degree from Sobhasaria Engineering College with a specialization in Computer Science engineering.
 
-                I'm currently enrolled in a MERN Stack Training program offered by LEARN and BUILD Company, a highly
-                reputable Organization.
-                I have acquired a comprehensive skill set including HTML,CSS,JavaScript,Node.js,Express and MongoDB
-                through this training program.
+                I'm currently enrolled in a DevOps and AWS training program at Besant Technology, focusing on DevOps methodologies,
+                AWS cloud services, and related tools. I'm actively developing my
+                skills in areas such as Jenkins, Docker, Kubernetes, and AWS infrastructure management.
             </p>
         </div>
 
@@ -93,204 +105,198 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2020-2024</div>
+                            <div class="year"><i class="bx bxs-calendar"></i> 2017-2021</div>
                             <h3>Graduation Degree - University</h3>
-                            <p>I'm pursuing Bachelor of Technology from Jaipur Engineering
+                            <p>I completed my Bachelor of Technology from Sobhasaria Engineering
                                 College, specialization in Computer Science engineering.
                             </p>
                         </div>
                     </div>
 
                     <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2018-2020</div>
-                            <h3>Rosera High School - Samastipur</h3>
-                            <p>I have completed my 12th class from Rosera High School, Rosera - Samastipur With 82%
-                                percentage in Bihar Board.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2017-2018</div>
-                            <h3>Rosera High School - Samastipur</h3>
-                            <p>I have completed my 10th class from Rosera High School, Rosera - Samastipur With 74%
-                                percentage in Bihar Board.
-                            </p>
-                        </div>
+                    <div class="content">
+                        <div class="year"><i class="bx bxs-calendar"></i> 2016-2017</div>
+                        <h3>Prince Academy Of Higher Education - Sikar</h3>
+                        <p>I have completed my 12th class from Prince Academy School, Sikar in CBSE Board.
+                        </p>
                     </div>
                 </div>
-            </div>
 
-            <div class="education-column">
-                <h3 class="title">Experience</h3>
-
-                <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2020-2024</div>
-                            <h3>Learn and Build - Company</h3>
-                            <p>I'm currently enrolled in a MERN Stack Training program offered by LEARN and BUILD
-                                Company, a highly reputable Organization.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2018-2020</div>
-                            <h3>Web Developer - Company</h3>
-                            <p>I have acquired skills including HTML,CSS,JavaScript,Node.js,Express and MongoDB through
-                                this training program.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> 2017-2018</div>
-                            <h3>Learn and Build - Company</h3>
-                            <p>I have completed a range of projects including A portfolio website, A pilgrim's place
-                                visitors portal and
-                                A note-making application.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- skills -->
-
-    <section class="skills" id="skills">
-        <h2 class="heading">My <span>Skills</span></h2>
-
-        <div class="skills-row">
-            <div class="skills-column">
-                <h3 class="title">Coding Skills</h3>
-
-                <div class="skills-box">
-                    <div class="skills-content">
-                        <div class="progress">
-                            <h3>HTML <span>85%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>CSS <span>70%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>JavaScript <span>65%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>C++<span>75%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="skills-column">
-                <h3 class="title">Professional Skills</h3>
-
-                <div class="skills-box">
-                    <div class="skills-content">
-                        <div class="progress">
-                            <h3>Web Design <span>70%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Web Development <span>87%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>MongoDB<span>75%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
-
-                        <div class="progress">
-                            <h3>Express<span>70%</span></h3>
-                            <div class="bar"><span></span></div>
-                        </div>
+                <div class="education-content">
+                    <div class="content">
+                        <div class="year"><i class="bx bxs-calendar"></i> 2014-2015</div>
+                        <h3>Prince Academy Of Higher Education - Sikar</h3>
+                        <p>I have completed my 10th class from Prince Academy School, Sikar With 76%
+                            percentage in CBSE Board.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
 
-    <!-- contact -->
+        <div class="education-column">
+            <h3 class="title">Experience</h3>
 
-    <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me!</span></h2>
-
-        <form action="#">
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="First Name" required>
-                    <span class="focus"></span>
+            <div class="education-box">
+                <div class="education-content">
+                    <div class="content">
+                        <div class="year"><i class="bx bxs-calendar"></i> 2023-2023</div>
+                        <h3>Besant Technology - Company</h3>
+                        <p>I'm currently enrolled in an AWS and DevOps Training program offered by Besant Technology
+                            Organization, a highly reputable Company.
+                        </p>
+                    </div>
                 </div>
-                <div class="input-field">
-                    <input type="text" placeholder="Last Name" required>
-                    <span class="focus"></span>
+                <!--
+                <div class="education-content">
+                    <div class="content">
+                        <div class="year"><i class="bx bxs-calendar"></i> 2018-2020</div>
+                        <h3>Mern Stac</h3>
+                        <p>I have acquired skills including HTML, CSS, JavaScript, Node.js, Express and MongoDB through
+                            this training program.
+                        </p>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Skills -->
+<section class="skills" id="skills">
+    <h2 class="heading">My <span>Skills</span></h2>
+
+    <div class="skills-row">
+        <div class="skills-column">
+            <h3 class="title">DevOps Tools</h3>
+
+            <div class="skills-box">
+                <div class="skills-content">
+                    <div class="progress">
+                        <h3>Jenkins <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Git & GitHub <span>85%</span></h3>
+                        <div class="bar"><span style="width: 85%;"></span>
+                        </div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>AWS <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Docker <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Kubernetes <span>90%</span></h3>
+                        <div class="bar"><span style="width: 90%;"></span></div>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="Email Address" required>
-                    <span class="focus"></span>
-                </div>
-                <div class="input-field">
-                    <input type="number" placeholder="Mobile Number" required>
-                    <span class="focus"></span>
+        <div class="skills-column">
+            <h3 class="title">Programming & Tools</h3>
+
+            <div class="skills-box">
+                <div class="skills-content">
+                    <div class="progress">
+                        <h3>Python <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Monitoring Tools <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>VS Code <span>90%</span></h3>
+                        <div class="bar"><span style="width: 90%;"></span></div>
+                    </div>
+
+                    <div class="progress">
+                        <h3>Linux <span>90%</span></h3>
+                        <div class="bar"><span style="width: 90%;"></span></div>
+                    </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
 
-            <div class="input-box">
-                <div class="input-field">
-                    <input type="text" placeholder="Branch" required>
-                    <span class="focus"></span>
-                </div>
-                <div class="input-field">
-                    <input type="text" placeholder="City" required>
-                    <span class="focus"></span>
-                </div>
-            </div>
+<!-- contact -->
 
-            <div class="textarea-field">
-                <textarea name="" id="" cols="30" rows="6" placeholder="Your Message"></textarea>
+<section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+
+    <form
+      action="https://formspree.io/f/xgejqobv"
+      method="POST"
+    >
+        <div class="input-box">
+            <div class="input-field">
+                <input type="text" placeholder="First Name" name="first_name" required>
                 <span class="focus"></span>
             </div>
-
-            <div class="btn-box btns">
-                <button type="submit" class="btn">Submit</button>
+            <div class="input-field">
+                <input type="text" placeholder="Last Name" name="last_name" required>
+                <span class="focus"></span>
             </div>
-
-        </form>
-    </section>
-
-    <!-- footer -->
-
-    <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; 2023 by Ajay | All Right Reserved. </p>
         </div>
 
-        <div class="footer-iconTop">
-            <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+        <div class="input-box">
+            <div class="input-field">
+                <input type="email" placeholder="Email Address" name="email" required>
+                <span class="focus"></span>
+            </div>
+            <div class="input-field">
+                <input type="tel" placeholder="Mobile Number" name="mobile" required>
+                <span class="focus"></span>
+            </div>
         </div>
-    </footer>
 
-    <script src="./index.js"></script>
+        <div class="input-box">
+            <div class="input-field">
+                <input type="text" placeholder="Branch" name="branch" required>
+                <span class="focus"></span>
+            </div>
+            <div class="input-field">
+                <input type="text" placeholder="City" name="city" required>
+                <span class="focus"></span>
+            </div>
+        </div>
+
+        <div class="textarea-field">
+            <textarea name="message" id="" cols="30" rows="6" placeholder="Your Message" required></textarea>
+            <span class="focus"></span>
+        </div>
+
+        <div class="btn-box btns">
+            <button type="submit" class="btn">Submit</button>
+        </div>
+    </form>
+</section>
+
+<!-- footer -->
+
+<footer class="footer">
+    <div class="footer-text">
+        <p>Copyright &copy; 2023 by Sunil | All Right Reserved. </p>
+    </div>
+
+    <div class="footer-iconTop">
+        <a href="#"><i class="bx bx-up-arrow-alt"></i></a>
+    </div>
+</footer>
+
+<script src="./index.js"></script>
 </body>
 
 </html>
