--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-            <img src="MyImage.jpg.png" alt="My Image">
+           <img src="profile-pic.png" alt="My Image">
             <span class="circle-spin"></span>
         </div>
 
