--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"></i> 2017-2021</div>
-                            <h3>Graduation Degree - University</h3>
+                            <h3>Sobhasaria Engineering College- RTU University</h3>
                             <p>I completed my Bachelor of Technology from Sobhasaria Engineering
                                 College, specialization in Computer Science engineering.
                             </p>
