--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </p>
 
             <div class="btn-box">
-                <a href="" class="btn">Hire Me</a>
-                <a href="" class="btn">Let's Talk</a>
+                <a href="mailto:skumawat.dev@gmail.com" class="btn">Hire Me</a>
+               <!-- <a href="" class="btn">Let's Talk</a> -->
             </div>
         </div>
 
