--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="img">
-            <img class="image" src="MyImage.jpg.png" alt="My Image">
+            <img class="image" src="Passport-Image.png" alt="My Image">
         </div>
 
         <div class="home-logo">
@@ -72,7 +72,7 @@
         <h2 class="heading">About <span>Me</span></h2>
 
         <div class="about-img">
-           <img src="profile-pic.png" alt="My Image">
+           <img src="" alt="My Image">
             <span class="circle-spin"></span>
         </div>
 
