--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             <div class="text-animate">
                 <h3>DevOps Engineer</h3>
             </div>
-            <p>DevOps Engineer with a passion for automation, Linux administration, Git version control, CI/CD, and cloud
-                technologies, seeking a role where I can leverage my skills to optimize software development workflows and enhance
-                application deployment efficiency.
-            </p>
+                 <p>DevOps Engineer experienced in building and optimizing infrastructure. Skilled in automation, monitoring, and ensuring system stability. 
+                     Collaborative team player committed to delivering high-quality solutions.</p>
+
 
             <div class="btn-box">
                 <a href="mailto:skumawat.dev@gmail.com" class="btn">Hire Me</a>
@@ -74,16 +73,17 @@
    
 
         <div class="about-content">
-            <h3>Junior DevOps Engineer!</h3>
+            <h3>DevOps Engineer!</h3>
             <p>
                 My name is Sunil Kumawat. I'm from Sikar district, Rajasthan.
-                I did my class 10th and 12th from CBSE Board.
+            I did my class 10th and 12th from CBSE Board.
 
-                I hold a Bachelor of Technology degree from Sobhasaria Engineering College with a specialization in Computer Science engineering.
+            I hold a Bachelor of Technology degree from Sobhasaria Engineering College with a specialization in Computer Science engineering.
 
-                I'm currently enrolled in a DevOps and AWS training program at Besant Technology, focusing on DevOps methodologies,
-                AWS cloud services, and related tools. I'm actively developing my
-                skills in areas such as Jenkins, Docker, Kubernetes, and AWS infrastructure management.
+            Currently, I am gaining hands-on experience as an Intern DevOps Engineer at Cloudastra Technologies, where I'm involved in developing automation tools, migrating applications to Kubernetes, and managing IT infrastructure to ensure reliability.
+
+            Previously, I was enrolled in a DevOps and AWS training program at Besant Technology, focusing on DevOps methodologies, AWS cloud services, and related tools. I actively developed my skills in areas such as Jenkins, Docker, Kubernetes, and AWS infrastructure management during this program.
+        
             </p>
         </div>
 
@@ -136,25 +136,34 @@
             <h3 class="title">Experience</h3>
 
             <div class="education-box">
-                <div class="education-content">
-                    <div class="content">
-                        <div class="year"><i class="bx bxs-calendar"></i> 2023-2023</div>
-                        <h3>Besant Technology - Company</h3>
-                        <p>I'm currently enrolled in an AWS and DevOps Training program offered by Besant Technology
-                            Organization, a highly reputable Company.
-                        </p>
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i> Nov 2023 - Current</div>
+                            <h3>Cloudastra Technologies - Noida</h3>
+                            <p>DevOps Engineer Intern
+                                • Developed automation tools to optimize system performance with minimal manual intervention.
+                                • Led the migration of applications from AWS EC2 to EKS.
+                                • Managed and monitored IT infrastructure to ensure reliability.
+                                • Implemented proactive measures based on performance metrics and logs analysis.
+                                • Ensured high availability of production services.
+                                • Troubleshot operational and application issues within SLAs.
+                            </p>
+                        </div>
                     </div>
-                </div>
-                <!--
                 <div class="education-content">
-                    <div class="content">
-                        <div class="year"><i class="bx bxs-calendar"></i> 2018-2020</div>
-                        <h3>Mern Stac</h3>
-                        <p>I have acquired skills including HTML, CSS, JavaScript, Node.js, Express and MongoDB through
-                            this training program.
-                        </p>
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i> Jan 2023 - Aug 2023</div>
+                            <h3>Besant Technology - Bengaluru</h3>
+                            <p>DevOps Trainee
+                                • Automated application deployment processes to enhance development efficiency.
+                                • Researched and evaluated new tools and technologies for agile environment enhancement.
+                                • Tested and debugged applications, documenting solutions for the development team.
+                                • Set up ELK platform for log management, transforming unstructured logs into structured format.
+                                • Managed software installation and upgrades.
+                                • Deployed code updates to test and production environments
+                            </p>
+                        </div>
                     </div>
-                </div> -->
             </div>
         </div>
     </div>
