--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@
                             <div class="year"><i class="bx bxs-calendar"></i> Nov 2023 - Current</div>
                             <h3>Cloudastra Technologies - Noida</h3>
                             <p>DevOps Engineer Intern
-                                • Developed automation tools to optimize system performance with minimal manual intervention.
-                                • Led the migration of applications from AWS EC2 to EKS.
-                                • Managed and monitored IT infrastructure to ensure reliability.
-                                • Implemented proactive measures based on performance metrics and logs analysis.
-                                • Ensured high availability of production services.
-                                • Troubleshot operational and application issues within SLAs.
+                               <ul>
+    <li>Developed automation tools to optimize system performance with minimal manual intervention.</li>
+    <li>Led the migration of applications from AWS EC2 to EKS.</li>
+    <li>Managed and monitored IT infrastructure to ensure reliability.</li>
+    <li>Implemented proactive measures based on performance metrics and logs analysis.</li>
+    <li>Ensured high availability of production services.</li>
+    <li>Troubleshot operational and application issues within SLAs.</li>
+</ul>
+
                             </p>
                         </div>
                     </div>
