--- a/index.html
+++ b/index.html
@@ -158,12 +158,15 @@
                             <div class="year"><i class="bx bxs-calendar"></i> Jan 2023 - Aug 2023</div>
                             <h3>Besant Technology - Bengaluru</h3>
                             <p>DevOps Trainee
-                                • Automated application deployment processes to enhance development efficiency.
-                                • Researched and evaluated new tools and technologies for agile environment enhancement.
-                                • Tested and debugged applications, documenting solutions for the development team.
-                                • Set up ELK platform for log management, transforming unstructured logs into structured format.
-                                • Managed software installation and upgrades.
-                                • Deployed code updates to test and production environments
+                              <ul>
+    <li>Automated application deployment processes to enhance development efficiency.</li>
+    <li>Researched and evaluated new tools and technologies for agile environment enhancement.</li>
+    <li>Tested and debugged applications, documenting solutions for the development team.</li>
+    <li>Set up ELK platform for log management, transforming unstructured logs into structured format.</li>
+    <li>Managed software installation and upgrades.</li>
+    <li>Deployed code updates to test and production environments.</li>
+</ul>
+
                             </p>
                         </div>
                     </div>
