--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <h2 class="heading">Contact <span>Me!</span></h2>
 
     <form
-      action="https://formspree.io/f/xgejqobv"
+      action="https://script.google.com/macros/s/AKfycbz4UMvWnXA2EfAV-NWA0bbQsqqkYBKb4_VmA3r0_BJe5jlc69MAT93jMOfgdMeWBU9P/exec"
       method="POST"
     >
         <div class="input-box">
