--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <div class="img">
-            <img class="image" src="Passport-Image.png" alt="My Image">
+            <img class="image" src="Passport-Image.png" alt="My Image" loading="lazy">
             <span class="circle-spin"></span>
         </div>
 
@@ -73,26 +73,62 @@
    
 
         <div class="about-content">
-            <h3>DevOps Engineer!</h3>
-            <p>
-                My name is Sunil Kumawat. I'm from Sikar district, Rajasthan.
-            I did my class 10th and 12th from CBSE Board.
-
-            I hold a Bachelor of Technology degree from Sobhasaria Engineering College with a specialization in Computer Science engineering.
-
-            Currently, I am gaining hands-on experience as an Intern DevOps Engineer at Cloudastra Technologies, where I'm involved in developing automation tools, migrating applications to Kubernetes, and managing IT infrastructure to ensure reliability.
-
-            Previously, I was enrolled in a DevOps and AWS training program at Besant Technology, focusing on DevOps methodologies, AWS cloud services, and related tools. I actively developed my skills in areas such as Jenkins, Docker, Kubernetes, and AWS infrastructure management during this program.
-        
-            </p>
-        </div>
+        <h3>DevOps Engineer</h3>
+        <p>
+            I am Sunil Kumawat, a DevOps Engineer with over 2 years of experience working extensively with AWS cloud services. 
+            My expertise lies in writing automation scripts, developing CI/CD pipelines using Jenkins and GitLab, and optimizing infrastructure through automation. 
+            I have a proven track record of reducing manual work and increasing deployment efficiency within teams. 
+            Additionally, I am familiar with Docker containers and Kubernetes, enabling me to manage and scale containerized applications.
+            I am a quick learner who enjoys problem-solving and collaborating with different teams to deliver high-quality solutions.
+        </p>
+    </div>
 
         <div class="btn-box btns">
             <a href="#" class="btn">Read More</a>
         </div>
     </section>
 
-    <!-- Education -->
+        <div class="education-column">
+            <h3 class="title">Experience</h3>
+
+            <div class="education-box">
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class="bx bxs-calendar"></i> Nov 2023 - Sep 2024</div>
+                            <h3>Cloudastra Technologies - Noida</h3>
+                            <p>Junior DevOps Engineer
+                            <ul>
+                                <li>Automated deployment pipelines using AWS services, increasing efficiency by 70%.</li>
+                                <li>Reduced provisioning time by 60% by implementing reusable Terraform modules.</li>
+                                <li>Managed containerized environments with Docker and Docker Compose for seamless orchestration.</li>
+                                <li>Ensured 99% uptime for services using AWS CloudWatch for monitoring and alerting.</li>
+                                <li>Improved application security and content delivery by 20% using AWS WAF and CDN.</li>
+                                <li>Optimized infrastructure expenses by 30% through cost-saving strategies.</li>
+                            </ul>
+
+                            </p>
+                        </div>
+                    </div>
+                <div class="education-content">
+                    <div class="content">
+                        <div class="year"><i class="bx bxs-calendar"></i> Aug 2022 - Oct 2023</div>
+                        <h3>Agiro Technology - Noida</h3>
+                        <p>Technical Support Engineer
+                            <ul>
+                                <li>Gained hands-on experience in AWS EC2, S3, and IAM for managing cloud infrastructure and security.</li>
+                                <li>Set up basic monitoring dashboards to track system health, helping prevent issues before they impacted users.</li>
+                                <li>Automated daily tasks such as checking server status and collecting error logs with simple scripts.</li>
+                            </ul>
+
+                            </p>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+  <!-- Education -->
     <section class="education" id="education">
         <h2 class="heading">My <span>Journey</span></h2>
 
@@ -105,8 +141,7 @@
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"></i> 2017-2021</div>
                             <h3>Sobhasaria Engineering College - RTU University</h3>
-                            <p>I completed my Bachelor of Technology from Sobhasaria Engineering
-                                College, specialization in Computer Science engineering.
+                            <p>Bachelor of Technology in Computer Science Engineering.
                             </p>
                         </div>
                     </div>
@@ -115,8 +150,7 @@
                     <div class="content">
                         <div class="year"><i class="bx bxs-calendar"></i> 2016-2017</div>
                         <h3>Prince Academy Of Higher Education - Sikar</h3>
-                        <p>I have completed my 12th class from Prince Academy School, Sikar in CBSE Board.
-                        </p>
+                        <p>Completed my 12th class under the CBSE Board.</p>
                     </div>
                 </div>
 
@@ -124,56 +158,11 @@
                     <div class="content">
                         <div class="year"><i class="bx bxs-calendar"></i> 2014-2015</div>
                         <h3>Prince Academy Of Higher Education - Sikar</h3>
-                        <p>I have completed my 10th class from Prince Academy School, Sikar With 76%
-                            percentage in CBSE Board.
-                        </p>
+                        <p>Completed my 10th class with 76% in CBSE Board.</p>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="education-column">
-            <h3 class="title">Experience</h3>
-
-            <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> Nov 2023 - Current</div>
-                            <h3>Cloudastra Technologies - Noida</h3>
-                            <p>DevOps Engineer Intern
-                               <ul>
-    <li>Developed automation tools to optimize system performance with minimal manual intervention.</li>
-    <li>Led the migration of applications from AWS EC2 to EKS.</li>
-    <li>Managed and monitored IT infrastructure to ensure reliability.</li>
-    <li>Implemented proactive measures based on performance metrics and logs analysis.</li>
-    <li>Ensured high availability of production services.</li>
-    <li>Troubleshot operational and application issues within SLAs.</li>
-</ul>
-
-                            </p>
-                        </div>
-                    </div>
-                <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class="bx bxs-calendar"></i> Jan 2023 - Aug 2023</div>
-                            <h3>Besant Technology - Bengaluru</h3>
-                            <p>DevOps Trainee
-                              <ul>
-    <li>Automated application deployment processes to enhance development efficiency.</li>
-    <li>Researched and evaluated new tools and technologies for agile environment enhancement.</li>
-    <li>Tested and debugged applications, documenting solutions for the development team.</li>
-    <li>Set up ELK platform for log management, transforming unstructured logs into structured format.</li>
-    <li>Managed software installation and upgrades.</li>
-    <li>Deployed code updates to test and production environments.</li>
-</ul>
-
-                            </p>
-                        </div>
-                    </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <!-- Skills -->
 <section class="skills" id="skills">
@@ -192,8 +181,7 @@
 
                     <div class="progress">
                         <h3>Git & GitHub <span>85%</span></h3>
-                        <div class="bar"><span style="width: 85%;"></span>
-                        </div>
+                        <div class="bar"><span style="width: 85%;"></span></div>
                     </div>
 
                     <div class="progress">
@@ -225,13 +213,13 @@
                     </div>
 
                     <div class="progress">
-                        <h3>Monitoring Tools <span>80%</span></h3>
-                        <div class="bar"><span style="width: 80%;"></span></div>
+                        <h3>Terraform <span>85%</span></h3>
+                        <div class="bar"><span style="width: 85%;"></span></div>
                     </div>
 
                     <div class="progress">
-                        <h3>VS Code <span>90%</span></h3>
-                        <div class="bar"><span style="width: 90%;"></span></div>
+                        <h3>Ansible <span>80%</span></h3>
+                        <div class="bar"><span style="width: 80%;"></span></div>
                     </div>
 
                     <div class="progress">
@@ -243,6 +231,40 @@
         </div>
     </div>
 </section>
+
+<!-- Project -->
+
+<section class="projects" id="projects">
+    <h2 class="heading">Key <span>Projects</span></h2>
+
+    <div class="project-box">
+        <h3>Decentralized Betting App | 02/24 – 07/24</h3>
+        <ul>
+            <li>Developed CI/CD pipelines using AWS CodePipeline and CodeBuild, improving deployment efficiency.</li>
+            <li>Deployed backend with Docker containers and implemented AWS WAF for enhanced security and performance.</li>
+            <li>Migrated from CloudFront to Cloudflare, improving content delivery speed and reducing costs.</li>
+        </ul>
+    </div>
+
+    <div class="project-box">
+        <h3>Web3 Blockchain Infrastructure Project | 12/23 – 02/24</h3>
+        <ul>
+            <li>Automated infrastructure setup using Terraform and Ansible, reducing manual effort by 98%.</li>
+            <li>Implemented Zabbix, Grafana, and Prometheus for monitoring, reducing downtime by 80%.</li>
+            <li>Supervised infrastructure on Scaleway Cloud, achieving a 95% improvement in collaboration efficiency.</li>
+        </ul>
+    </div>
+
+    <div class="project-box">
+        <h3>GCP Project | 07/24 – Present</h3>
+        <ul>
+            <li>Streamlined GitLab CI pipeline, reducing manual intervention by 95%.</li>
+            <li>Utilized Google Compute Engine with instance templates, reducing deployment complexity by 50%.</li>
+            <li>Executed blue-green deployments using Managed Instance Groups, minimizing downtime by 80%.</li>
+        </ul>
+    </div>
+</section>
+
 
 <!-- contact -->
 
@@ -301,7 +323,7 @@
 
 <footer class="footer">
     <div class="footer-text">
-        <p>Copyright &copy; 2023 by Sunil | All Right Reserved. </p>
+      <p>&copy; 2024 Sunil Kumawat. All rights reserved.</p>
     </div>
 
     <div class="footer-iconTop">
